Fix bugs with aligning h3 element and copy icon in team/team.component.sass file

--- a/frontend/src/app/modules/availability/slot/slot.component.sass
+++ b/frontend/src/app/modules/availability/slot/slot.component.sass
@@ -1,8 +1,6 @@
 hr
     border: 0
     border-top: 3px solid #eef0f4
-li
-    list-style: none
 
 .card-container-disabled
     opacity: 0.7
