--- a/frontend/src/app/modules/availability/team/team.component.sass
+++ b/frontend/src/app/modules/availability/team/team.component.sass
@@ -11,17 +11,18 @@
 
 .team-info
     display: flex
-    flex-direction: column
     align-items: flex-start
-    margin: 1em 1em 1em 0
+    margin-top: 1em
     .team-name
         color: #808896
         display: flex
         flex-direction: row
-        align-items: center
+        justify-content: center
         margin-top: 1em
+        h3
+            font-weight: bold
         .copy-icon
-            width: 20px
-            height: 20px
+            width: 30px
+            height: 30px
             margin-left: 0.7em
             filter: invert(94%) sepia(3%) saturate(1127%) hue-rotate(185deg) brightness(88%) contrast(86%)
